--- a/Flowering_parts_charts.Rmd
+++ b/Flowering_parts_charts.Rmd
@@ -67,7 +67,7 @@ SummaryInvestSpp <-
 names(SummaryInvestSpp) <- c("species","weight_spp")
 
 SummaryInvest <- merge(SummaryInvest,SummaryInvestSpp,by=c("species"),all.x=TRUE)
-SummaryInvest$prop_weight_spp <- round(SummaryInvest$weight / SummaryInvest$weight_spp,digits=3)
+SummaryInvest$prop_weight <- round(SummaryInvest$weight / SummaryInvest$weight_spp,digits=3)
 SummaryInvest$labels <- paste(SummaryInvest$parts_fewer_yet," (",SummaryInvest$prop_weight,")")
 SummaryInvest <- SummaryInvest[order(factor(SummaryInvest$parts_fewer_yet,levels=c(c("bud","petals","calyx","finished_flower","fruit_seed_immature","seed","seed_pod","fruit_mature","bract","pedicel","inflorescence_stalk","green_parts","cone")))),]
 ```
@@ -125,9 +125,13 @@ barplot_data_matrix <- as.matrix(barplot_data[2:15])
 
 #pdf("figs2/Flower_parts_barchart.pdf", height=8, width=11)
 #plot
-barplot(barplot_data_matrix,beside=FALSE,width=0.8,cex.axis=.8,cex.names=.8,xlim=c(.5,17.2),col=col.barplot(barplot_data$parts_fewer_yet),ylab="proportion repro investment")
-legend(13.5,1,legend=barplot_data$parts_fewer_yet,pch=16, cex=1.2,bty="n",col=col.barplot(barplot_data$parts_fewer_yet))
-#dev.off()
+win.metafile("figs2/RA_talk_barplot.wmf", height=4, width=10)
+plot
+par(mfcol=c(1,1), cex=1, omi=c(.3,.6,.01,.01), mai=c(.4,.15,.3,0.1)) 
+barplot(barplot_data_matrix,beside=FALSE,width=0.8,cex.axis=.7,cex.names=.7,xlim=c(.5,17.2),col=col.barplot(barplot_data$parts_fewer_yet),ylab="proportion repro investment")
+legend(13.5,1,legend=barplot_data$parts_fewer_yet,pch=16, cex=1,bty="n",col=col.barplot(barplot_data$parts_fewer_yet))
+
+dev.off()
 ##For pie charts
 
 data <- subset(SummaryInvest,weight>0)
