accessory costs patterns

--- a/Accessory_figs_2015_12.Rmd
+++ b/Accessory_figs_2015_12.Rmd
@@ -1,3 +1,123 @@
+```{r}
+par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+SummaryInd$costs_for_seed <- SummaryInd$seed_count * SummaryInd$seedcosts
+SummaryInd$costs_for_aborted <- SummaryInd$repro_inv - SummaryInd$costs_for_seed
+plot(costs_for_seed ~ costs_for_aborted,data=subset(SummaryInd,repro_inv>0),col=col.spp(species),pch=16,log="xy")
+SummaryInd$prop_aborted <- SummaryInd$costs_for_aborted / SummaryInd$repro_inv
+plot(prop_aborted ~ age, data=subset(SummaryInd,repro_inv>0),col=col.spp(species),pch=16,log="x")
+
+
+plot(costs_for_seed ~ repro_inv,data=subset(SummaryInd,repro_inv>0),col=col.spp(species),pch=16,log="xy")
+abline(0,1)
+
+  
+par(mfrow=c(4,4), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+xvar <- "costs_for_aborted"
+yvar <- "costs_for_seed"
+
+data <- subset(SummaryInd,seedset>0&prop_propagule>0)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+```{r}
+par(mfrow=c(2,3), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+#total reproductive investment much stronger correlation with total weight 
+win.metafile("figs2/best_correlate2.wmf", height=6, width=12)
+plot
+
+par(mfrow=c(1,3), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+plot(propagule_inv~total_weight_0,data=subset(SummaryInd,propagule_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000))
+mod <- lm(log(total_weight_0)~log(propagule_inv),data=subset(SummaryInd,propagule_inv>0))
+words.top.left.logxy(mod)
+
+plot(repro_inv~total_weight_0,data=subset(SummaryInd,repro_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000))
+mod <- lm(log(total_weight_0)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+words.top.left.logxy(mod)
+
+plot(prepollen_all_inv~total_weight_0,data=subset(SummaryInd,prepollen_all_inv>0),col=col.spp(species),pch=16,log="xy",xlim=c(10,10000000),ylim=c(1,1000000))
+mod <- lm(log(total_weight_0)~log(prepollen_all_inv),data=subset(SummaryInd,prepollen_all_inv>0))
+words.top.left.logxy(mod)
+
+dev.off()
+
+
+
+plot(propagule_inv~total_inv,data=subset(SummaryInd,propagule_inv>0),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(total_inv)~log(propagule_inv),data=subset(SummaryInd,propagule_inv>0))
+words.top.left.logxy(mod)
+
+plot(repro_inv~total_inv,data=subset(SummaryInd,repro_inv>0),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(total_inv)~log(repro_inv),data=subset(SummaryInd,repro_inv>0))
+words.top.left.logxy(mod)
+
+plot(prepollen_all_inv~total_inv,data=subset(SummaryInd,prepollen_all_inv>0),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(total_inv)~log(prepollen_all_inv),data=subset(SummaryInd,prepollen_all_inv>0))
+words.top.left.logxy(mod)
+
+
+#shift in accessory costs per seed with seed size
+par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
+win.metafile("figs2/accessory_per_seed_vs_seed_size.wmf", height=6, width=6)
+plot
+plot(accessory_per_seed~seed_size,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+points(accessory_per_seed~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,cex=2)
+mod <- lm(log(seed_size)~log(accessory_per_seed),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+summary(mod)
+abline(log(5),1)
+dev.off()
+
+#each species follows its own linear trajectory, but species lines are offset from one another
+#species with lower intercepts have greater benefit if seed count is metric that matters; species with higher intercept less disadvntaged is a few heavy seeds worth as much as many smaller seeds
+win.metafile("figs2/accessory_per_seed_vs_prop_propagule.wmf", height=6, width=6)
+plot
+plot(accessory_per_seed~prop_propagule,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+dev.off()
+```
+
+
+plot(seed_count~accessory_per_seed,data=subset(SummarySpp[["mean"]],seed_count>1),col=col.spp(species),pch=16,log="xy")
+```{r}
+plot(accessory_per_seed~growth_leaf,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+points(accessory_per_seed~growth_leaf,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,cex=2)
+mod <- lm(log(growth_leaf)~log(accessory_per_seed),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+
+plot(prop_propagule~growth_leaf,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+points(prop_propagule~growth_leaf,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,cex=2)
+mod <- lm(log(growth_leaf)~log(prop_propagule),data=subset(SummarySpp[["mean"]]))
+words.bottom.left.logxy(mod)
+
+plot(accessory_per_seed~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,log="xy")
+mod <- lm(log(seed_size)~log(accessory_per_seed),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+abline(log(5),1)
+
+plot(prop_propagule~seed_size,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+points(prop_propagule~seed_size,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,cex=2)
+mod <- lm(log(seed_size)~log(prop_propagule),data=subset(SummarySpp[["mean"]]))
+words.top.left.logxy(mod)
+
+plot(costs_per_seed~accessory_inv,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+plot(seedset~accessory_inv,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+```
+
+plot(accessory_per_seed~prop_propagule,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+points(accessory_per_seed~prop_propagule,data=subset(SummarySpp[["mean"]]),col=col.spp(species),pch=16,cex=2)
+
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
 plot(seedset~prepollen_all_count,data=subset(SummaryInd,seedset>0),col=col.spp(species),pch=16,log="xy")
@@ -14,6 +134,8 @@ points(seed_size~seedset,data=subset(SummarySpp[["mean"]],seed_count>0),col=col.
 mod<-lm(log(seedset)~log(seed_size),data=subset(SummaryInd,seed_count>0))
 words.bottom.left.logxy(mod)
 ```
+
+
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
 par(mfrow=c(2,2), cex=1, omi=c(.4,0.3,.3,0.3), mai=c(1.1,1,.3,0.3))
@@ -53,6 +175,28 @@ for(spp in names(data)) {
 ```
 
 ```{r}
+par(mfrow=c(4,4), cex=1, omi=c(.1,.1,.1,.1), mai=c(.5,.5,.5,.5)) 
+xvar <- "age"
+yvar <- "seedset"
+
+data <- subset(SummaryInd,seedset>0&age>3)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+```{r}
 data <- subset(SummaryInd)
 data <- split(data, data$species)
 
@@ -71,6 +215,12 @@ plot(accessory_per_seed~accessory_inv,data=subset(SummaryInd),col=col.spp(specie
 plot(accessory_inv~seedcosts,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
 plot(seedset~seedcosts,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
 plot(seedset~costs_per_seed,data=subset(SummaryInd),col=col.spp(species),pch=16,log="y")
+plot(accessory_per_seed~costs_per_seed,data=subset(SummaryInd),col=col.spp(species),pch=16,log="y")
+plot(propagule_inv~accessory_inv,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+plot(propagule_inv~repro_inv,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+plot(propagule_inv~total_weight,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+plot(repro_inv~total_weight,data=subset(SummaryInd),col=col.spp(species),pch=16,log="xy")
+abline(0,1)
 ```
 
 ```{r, echo=FALSE,message=FALSE,warning=FALSE,fig.width=14, fig.height=14}
@@ -264,5 +414,34 @@ InvestPetal <- subset(SummaryInvest,parts_fewer=="petals")
 View(InvestPetal)
 plot(prop_weight,SummaryInvest,color=col.spp(parts_fewer))
 
-
+```{r}
 SummaryInd$prop_fruit <- SummaryInd$fruit_weight / SummaryInd$repro_inv
+
+SummaryInd$costs_for_seeds_produced <- SummaryInd$costs_per_seed*SummaryInd$seed_count
+SummaryInd$costs_for_aborted <- SummaryInd$repro_inv - SummaryInd$costs_for_seeds_produced
+
+plot(costs_for_seeds_produced~costs_for_aborted,data=subset(SummaryInd,seed_count>0),log="xy",col=col.spp(species), pch=16)
+
+par(mfrow=c(4,4), cex=1, omi=c(.7,.7,.1,.1), mai=c(.7,.9,.4,0.2)) 
+xvar <- "costs_for_aborted"
+yvar <- "costs_for_seeds_produced"
+
+data <- subset(SummaryInd,prop_propagule>0)
+data <- split(data, data$species)
+lmfits <- lapply(data, function(x) lm(log(x[[yvar]]) ~  (log(x[[xvar]]))))
+results <- summarise_all_fits(lmfits)
+
+results$r.squared <- round(results$r.squared,digits=3)
+results$p.value <- round(results$p.value,digits=3)
+results$a <- round(results$a,digits=2)
+results$b <- round(results$b,digits=2)
+results
+
+for(spp in names(data)) {
+  plot_yvar_vs_xvar(data[[spp]], yvar, xvar,log="xy",xlab="",ylab="",cex=1, 
+                    main=spp,col=col.age(data[[spp]]$age))
+}
+```
+
+plot(seedcosts~seed_size,data=subset(SummaryInd),log="xy",col=col.spp(species), pch=16)
+plot(accessory_per_seed~seed_size,data=subset(SummaryInd),log="xy",col=col.spp(species), pch=16)
